modules/gdscript/tests/scripts/analyzer/errors/bitwise_float_right_operand.gd
func test():
	# Error here.
	print(2 >> 4.4)
